2000-10-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c (MatchBindingExactly):
	(RemoveMatchingBinding):
	fixed removal of binding broken with last patch
	new function MatchBindingExactly()

2000-10-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_style_and_decor):
	fixed UMR in FvwmWindow.wShaped

	* fvwm/fvwm.c (main):
	* fvwm/move_resize.c (resize_window):
	(moveLoop):
	* fvwm/misc.c (WaitForButtonsUp):
	* fvwm/functions.c (CheckActionType):
	* fvwm/focus.c (focus_grab_buttons):
	* fvwm/bindings.c (ParseBinding):
	* libs/Bindings.c (GrabWindowButton):
	the number of supported buttons is now a macro in defaults.h
	theoretically it should be possible to support 5 mouse buttons now

	* libs/defaults.h (NUMBER_OF_MOUSE_BUTTONS):
	moved it here instead

	* fvwm/fvwm.h (MAX_BUTTONS):
	removed unused macro

	* fvwm/bindings.c (ParseBinding):
	fixed FMR
	* libs/fvwmlib.h:
	* libs/Bindings.c (DestroyBinding):
	(RemoveBinding):
	(RemoveMatchingBinding):
	partially rewrote binding list handling
	(MatchBinding):
	performance enhancements and bugfixes

2000-10-03  Dan Espen  <dane@mk.telcordia.com>

	* libs/fvwmlib.h: remove #define MTRACE_DEBUGGING, its not portable.

2000-10-03  olicha  <olivier.chapuis@free.fr>

	* fvwm/bindings.c (ParseBinding):
	* libs/Bindings.c (RemoveBinding):
	* libs/fvwmlib.h
	Try to fix the Add/Remove bindings code

2000-09-30  olicha  <olivier.chapuis@free.fr>

	* libs/Bindings.c (MatchBinding):
	* fvwm/read.c (run_command_file):
	* fvwm/module_interface.c (DeleteMessageQueueBuff):
	Applied dmalloc suggestions

2000-09-24  olicha  <olivier.chapuis@free.fr>

	* fvwm/gnome.c (GNOME_ProcessClientMessage):
	fixed my previous commit

2000-09-25  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/session.c (SetClientID):
	* fvwm/session.h:
	implemented forgotten function, thus fixing a bad bug with timeout

2000-09-24  olicha  <olivier.chapuis@free.fr>

	* fvwm/gnome.c (GNOME_ProcessClientMessage):